SERVER-46571 Give initial replica set configs a term of -1