src/mongo/db/repl/repl_set_config_checks.cpp
@@ -330,11 +330,12 @@ StatusWith<int> validateConfigForInitiate(ReplicationCoordinatorExternalState* e
                                              << newConfig.getConfigVersion());
     }
 
-    if (newConfig.getConfigTerm() != OpTime::kInitialTerm) {
-        return StatusWith<int>(
-            ErrorCodes::NewReplicaSetConfigurationIncompatible,
-            str::stream() << "Configuration used to initiate a replica set must have term "
-                          << OpTime::kInitialTerm << ", but found " << newConfig.getConfigTerm());
+    if (newConfig.getConfigTerm() != OpTime::kUninitializedTerm) {
+        return StatusWith<int>(ErrorCodes::NewReplicaSetConfigurationIncompatible,
+                               str::stream()
+                                   << "Configuration used to initiate a replica set must have term "
+                                   << OpTime::kUninitializedTerm << ", but found "
+                                   << newConfig.getConfigTerm());
     }
     return findSelfInConfigIfElectable(externalState, newConfig, ctx);
 }
